# cosmic-conn

./: .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  python-pytest.yml
cosmic_conn/: __init__.py  convert_torchscript.py  data_utils.py  ground_imaging_torchscript_0.2.8.pt  inference_cr.py  reduce_cr.py  test_multiprocessing.py  train.py
cosmic_conn/cr_pipeline/: banzai_stats.py  lco_cr_reduction.py  nres_cr_reduction.py  options.py  utils_img.py  utils_io.py  utils_sep.py  zscale.py
cosmic_conn/dl_framework/: cosmic_conn.py  dataloader.py  options.py  parts.py  unet.py  utils_ml.py
cosmic_conn/evaluation/: Gemini_ROC_PR.py  HST_ROC_PR.py  LCO_ROC_PR.py  LCO_plot4banzai.py  NRES_ROC_PR.py  detection_discrepancy_Gemini.py  detection_discrepancy_LCO.py  utils.py
cosmic_conn/trained_models/: cosmic-conn_HST_ACS_WFC_v0.2.2.pth  cosmic-conn_HST_ACS_WFC_v0.2.8.pth  cosmic-conn_LCO_NRES_v0.2.2.pth  cosmic-conn_LCO_NRES_v0.2.8.pth  cosmic-conn_ground_imaging_v0.2.2.pth  cosmic-conn_ground_imaging_v0.2.8.pth
cosmic_conn/web_app/: app.py
cosmic_conn/web_app/static/: AstroMessage.js  ControlPanel.js  DownloadHandler.js  FileInputHandler.js  GlobalParas.js  ImageController.js  ImageModel.js  ImageUtils.js  ImageView.js  ScrollingControl.js  StatusIndicator.js  ThumbnailBar.js  Utils.js  script.js
cosmic_conn/web_app/static/css/: controls.css  panel.css  splide-skyblue.min.css  thumbnails.css
cosmic_conn/web_app/templates/: FrameControls.html  MaskControls.html  complete.html  upload.html
cosmic_conn/web_app/templates/components/: HeaderContainer.html  PreviewContainer.html  Thumbnail.html  ThumbnailContainer.html
cosmic_conn/web_app/toolkit/: astromsg.py  file_manager.py  toolkit.py
docs/: Makefile  README.rst  conf.py  index.rst  make.bat
docs/source/: contributing.rst  developer_guide.rst  installation.rst  lco_cr_dataset.rst  troubleshooting.rst  user_guide.rst
paper_utils/: NRES_prediction_compare.py  cr_rate.py  cr_triplets.py  dataset_stats.py  detection_discrepancy_Gemini.py  detection_discrepancy_LCO.py  development_env.yml  gemini_result_vis.py  median_weighted_mask.py  model_search.py  nres_result_vis.py  prediction_compare.py  tensorboard_vis.py
paper_utils/util_scripts/: frame_mads.py  move_train_to_test.py  remove_rejeceted_files.py  remove_unfit_banzai_frms.py
scripts/: deployment_compile.py  reduce_lco_cr.sh  reduce_lco_nres.sh  train_hst.sh  train_lco.sh
scripts/abalation_study/: cosmic-conn.sh  deepcr+1024+gn.sh  deepcr+1024.sh  deepcr+gn.sh  deepcr+loss.sh  deepcr.sh
tests/: __init__.py  test_cosmic_conn.py  test_cr_labeling_pipeline.py
